# RTXNTC

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  README.md  ThirdPartyLicenses.txt
assets/models/FlightHelmet/: FlightHelmet.ntc-materials.txt  FlightHelmet.ntc.gltf  GlassPlasticMat.ntc  HoseMat.ntc  LeatherPartsMat.ntc  LensesMat.ntc  MetalPartsMat.ntc
assets/testfiles/: PavingStones070_4bpp_large.ntc  PavingStones070_4bpp_medium.ntc  PavingStones070_4bpp_small.ntc  PavingStones070_4bpp_xlarge.ntc
docs/: BCTest.md  CommandLineTool.md  Explorer.md  Manifest.md  Renderer.md  SettingsAndQuality.md  TextureSetFile.md
docs/integration/: BlockCompression.md  Compression.md  Context.md  InferenceOnLoad.md  InferenceOnSample.md  Installation.md
libraries/: ntc.py
libraries/ntc-utils/: CMakeLists.txt
libraries/ntc-utils/include/ntc-utils/: DDSHeader.h  DeviceUtils.h  GraphicsBlockCompressionPass.h  GraphicsDecompressionPass.h  GraphicsImageDifferencePass.h  Manifest.h  Misc.h  Semantics.h
libraries/ntc-utils/src/: DeviceUtils.cpp  GraphicsBlockCompressionPass.cpp  GraphicsDecompressionPass.cpp  GraphicsImageDifferencePass.cpp  Manifest.cpp  Misc.cpp  NvidiaSansRegularFont.h  Semantics.cpp
samples/renderer/: CMakeLists.txt  DLSS-DX12.cpp  DLSS-VK.cpp  DLSS.cpp  DLSS.h  ForwardShadingCommon.hlsli  ForwardShadingPassFeedback.hlsl  LegacyForwardShadingPass.hlsl  NtcChannelMapping.h  NtcForwardShadingPass.cpp  NtcForwardShadingPass.h  NtcForwardShadingPass.hlsl  NtcForwardShadingPassConstants.h  NtcForwardShadingPass_CoopVec.slang  NtcMaterial.h  NtcMaterialLoader.cpp  NtcMaterialLoader.h  NtcSceneRenderer.cpp  Profiler.cpp  Profiler.h  README.md  RenderTargets.h  Shaders.cfg  SlangShaders.cfg
samples/renderer/feedbackmanager/include/: FeedbackManager.h
samples/renderer/feedbackmanager/src/: FeedbackManager.cpp  FeedbackManagerInternal.h  FeedbackTexture.cpp  FeedbackTexture.h  FeedbackTextureSet.cpp  FeedbackTextureSet.h
support/cmake/: ConfigureAgilitySDK.cmake  ConfigureNVTT3.cmake  FindNVTT3.cmake
support/tests/: make_test_ntc_files.py  test.py
support/tests/bctest/: BCTest.cpp  CMakeLists.txt  README.md
support/tools/: compression_study.py  convert_gltf_materials.py  gen_bc7_tables.py  make_release_package.cmd  release_files.txt
tools/cli/: CMakeLists.txt  GraphicsPasses.cpp  GraphicsPasses.h  NtcCommandLine.cpp  README.md  Utils.cpp  Utils.h
tools/explorer/: CMakeLists.txt  FlatImageView.cpp  FlatImageView.h  FlatImageView.hlsl  FlatImageViewConstants.h  ImGuiExtensions.cpp  ImGuiExtensions.h  ModelView.cpp  ModelView.h  ModelView.hlsl  ModelViewConstants.h  NtcExplorer.cpp  README.md  Shaders.cfg
